--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+}
 
 .test {
   color: red 
@@ -20,9 +26,15 @@
 
 
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+
+
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+div {
+  button {background-color: rgb(151, 151, 192)}
 }
