--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,5 @@
+@import "../styles/configcss.scss";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -13,16 +15,25 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-.test {
-  color: red 
-}
-
-
-
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: $main-background-color;
+  }
+}
+
+.test {
+  color: red;
+}
+
+#root {
+  margin: 0 auto;
+  text-align: center;
+  
+}
+
+div {
+  button {
+    background-color: $main-background-color;
   }
 }
