--- a/src/components/NavigationMenu/NavigationMenu.scss
+++ b/src/components/NavigationMenu/NavigationMenu.scss
@@ -14,10 +14,9 @@ nav {
 .routes {
   flex-grow: 1;
   display: flex;
-  justify-content: center;
   align-items: center;
   max-width: 100%;
-  background-color: rgb(116, 170, 204);
+  background-color: $main-background-color;
 }
 .navigation-menu {
   display: flex;
@@ -25,6 +24,7 @@ nav {
   align-items: center;
   padding-right: 40px;
   height: 76px;
+  background-color: $main-background-color;
 }
 .logo-container {
   align-items: center;
