dev1_WD0LV-4_NEW

--- a/src/pages/Teams/Teams.scss
+++ b/src/pages/Teams/Teams.scss
@@ -1,13 +1,13 @@
-.workers-achievements {
+.teams-achievements {
   margin: 0px 40px 0px 40px;
 }
 
-.workers-achievements-header {
+.teams-achievements-header {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.edit-workers {
+.edit-teams {
   display: flex;
   flex-direction: row;
   gap: 25px;
