--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -17,34 +17,12 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-<<<<<<< HEAD
-    background-color: #ffffff;
-=======
+    color: white;
     background-color: $main-background-color;
->>>>>>> dev2
   }
 }
 
 .test {
-<<<<<<< HEAD
-  color: red 
-}
-
-
-
-
-
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-div {
-  button {background-color: rgb(151, 151, 192)}
-=======
   color: red;
 }
 
@@ -56,5 +34,4 @@ div {
   button {
     background-color: $main-background-color;
   }
->>>>>>> dev2
 }
