--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -17,7 +17,7 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: white;
     background-color: $main-background-color;
   }
 }
