--- a/src/pages/Workers/WorkerPage/WokerPage.scss
+++ b/src/pages/Workers/WorkerPage/WokerPage.scss
@@ -1,23 +1,23 @@
-.worker-page-header {
+.worker-header {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 16px;
 }
-.name-worker {
-  font-size: 48px;
-  color: #fff;
-  font-weight: 700;
-  line-height: 56px;
-}
-.email-worker {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 20px;
-  opacity: 0.72;
-}
-
-.add-worker-section {
+.worker-initial {
   display: flex;
   flex-direction: row;
-  gap: 20px;
 }
+.worker-nav-menu {
+  ul{
+  display: flex;
+  flex-direction:row;
+  }
+}
+
+.worker-main {
+  display: flex;
+  flex-direction:row;
+  flex-grow: 1;
+  justify-content: space-between;
+}
+
