--- a/src/components/common/Footer/Footer.module.scss
+++ b/src/components/common/Footer/Footer.module.scss
@@ -1,4 +1,4 @@
+@import "@/styles/config.scss";
 .footer {
-  background-color: rgb(172, 199, 214);
-   
-  }
+  background-color: $main-background-color;
+}
