--- a/src/components/common/Header/Header.module.scss
+++ b/src/components/common/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/configcss.scss";
+@import "@/styles/config.scss";
 .header {
   background-color: $main-background-color;
 }
