--- a/src/pages/Teams/Teams.module.scss
+++ b/src/pages/Teams/Teams.module.scss
@@ -1,13 +1,13 @@
-.teams-achievements {
+.teamsAchievements {
   margin: 0px 40px 0px 40px;
 }
 
-.teams-achievements-header {
+.teamsAchievementsHeader {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.edit-teams {
+.editTeams {
   display: flex;
   flex-direction: row;
   gap: 25px;
