--- a/src/pages/Workers/WorkerPage/WorkerData/WorkerData.module.scss
+++ b/src/pages/Workers/WorkerPage/WorkerData/WorkerData.module.scss
@@ -1,3 +1,16 @@
+.workerData {
+  visibility: inherit;
+}
+
+.teams {
+  display: flex;
+  justify-content: row;
+}
+.workerDataTitle {
+  display: flex;
+  justify-content: space-between;
+}
+
 h2 {
   font-size: medium;
 }
