--- a/src/pages/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
+++ b/src/pages/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: row;
 }
+.workerAvatar {
+  width: 72px;
+  height: 72px;
+}
 .workerName {
   font-size: 48px;
   color: #fff;
