--- a/src/pages/Workers/WorkerPage/buttons/buttons.module.scss
+++ b/src/pages/Workers/WorkerPage/buttons/buttons.module.scss
@@ -4,10 +4,13 @@ button {
 .banWorkerButton {
   visibility: inherit;
 }
-.changeWorkerButton {
+.ChangeWorkerButton {
   visibility: inherit;
 }
-.deleteWorkerButton {
+.ChangeWorkerInformationButton {
+  visibility: inherit;
+}
+.deleteBanWorkerButton {
   visibility: inherit;
 }
 .linkWorkerButton {
