--- a/src/pages/Workers/WorkerPage/WokerPage.module.scss
+++ b/src/pages/Workers/WorkerPage/WokerPage.module.scss
@@ -30,6 +30,16 @@
   flex-grow: 1;
   justify-content: space-between;
 }
+.divider {
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(
+    to right,
+    rgba(#f4f4f4, 0.64),
+    rgba(#f4f4f4, 0.16)
+  );
+  opacity: 0.8;
+}
 .workerData {
   visibility: inherit;
 }
