dev1_WD0LV-7_0904

--- a/src/pages/Workers/WorkerPage/WokerPage.module.scss
+++ b/src/pages/Workers/WorkerPage/WokerPage.module.scss
@@ -40,8 +40,13 @@
   );
   opacity: 0.8;
 }
+
 .workerData {
   visibility: inherit;
+}
+.workerTeams {
+  display: flex;
+  flex-direction: column;
 }
 .workerAchievements {
   visibility: inherit;
