dev1_WD0LV-7_1204

--- a/src/pages/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
+++ b/src/pages/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
@@ -37,13 +37,13 @@
   gap: 20px;
 }
 
-.achiveItem {
+.achieveItem {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.achiveTitle {
+.achieveTitle {
   margin-top: 10px;
   text-align: center;
   color: white; /* Цвет заголовка */
