--- a/src/pages/Workers/WorkerPage/WorkerData/WorkerData.module.scss
+++ b/src/pages/Workers/WorkerPage/WorkerData/WorkerData.module.scss
@@ -40,6 +40,12 @@ h2 {
   &:disabled {
     cursor: default;
   }
+  &:enabled {
+    background: #f4f4f405;
+  }
+  &:focus {
+    background-color: #27f515;   //гыгыгы
+  }
 }
 .divider {
   width: 100%;
@@ -65,7 +71,7 @@ h2 {
 
 .workerInformation button {
   border: none;
-  background: #3a3a3a;
+  background: rgb(58, 58, 58);
   color: white;
   padding: 10px;
   border-radius: 5px;
