--- a/src/pages/Workers/WorkerPage/WorkerData/WorkerData.module.scss
+++ b/src/pages/Workers/WorkerPage/WorkerData/WorkerData.module.scss
@@ -44,7 +44,7 @@ h2 {
     background: #f4f4f405;
   }
   &:focus {
-    background-color: #27f515;   //гыгыгы
+    background-color: #193117;   //гыгыгы
   }
 }
 .divider {
