--- a/src/pages/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
+++ b/src/pages/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
@@ -4,11 +4,19 @@
   flex-direction: row;
   gap: 16px;
 }
+
 .workerAvatar {
-  width: 48px;
-  height: 48px;
   padding-left: 24px;
 }
+.small .workerAvatar {
+  width: 48px;
+  height: 48px;
+}
+.large .workerAvatar {
+  width: 72px;
+  height: 72px;
+}
+
 .workerName {
   font-size: 24px;
   color: #fff;
