--- a/src/pages/AchievementsConstructor/AchievementsConstructor.module.scss
+++ b/src/pages/AchievementsConstructor/AchievementsConstructor.module.scss
@@ -2,15 +2,35 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 2rem;
 
   .titleContainer {
     display: flex;
     align-items: center;
     margin-bottom: 2rem;
 
+    img {
+      width: 50px;
+      height: 50px;
+    }
+
     h1 {
       margin-left: 1rem;
+      font-size: 2rem;
+      color: #333;
     }
+  }
+
+  .divider {
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(
+      to right,
+      rgba(244, 244, 244, 0.64),
+      rgba(244, 244, 244, 0.16)
+    );
+    opacity: 0.8;
+    margin: 1rem 0;
   }
 
   .achievementsGrid {
@@ -21,7 +41,8 @@
     max-width: 1200px;
     padding: 1rem;
 
-    .achievementCard {
+    .achievementCard,
+    .createAchievementButton {
       border-radius: 20px;
       align-items: center;
       display: flex;
@@ -43,16 +64,17 @@
       img {
         width: 140px;
         height: 140px;
-        height: auto;
         margin-top: 18px;
       }
 
       .cardContent {
         padding: 1rem;
+        text-align: center;
 
         h2 {
           color: #333;
           font-size: 1.25rem;
+          margin: 0.5rem 0;
         }
 
         p {
@@ -61,37 +83,15 @@
         }
       }
     }
-  }
-  .divider {
-    width: 100%;
-    height: 1px;
-    background: linear-gradient(
-      to right,
-      rgba(#f4f4f4, 0.64),
-      rgba(#f4f4f4, 0.16)
-    );
-    opacity: 0.8;
-  }
-  .createAchievementButton {
-    border-radius: 8px;
-    width: 210px;
-    height: 274px;
-    align-items: center;
-    display: flex;
-    cursor: pointer;
-    flex-direction: column;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition:
-      transform 0.3s ease,
-      box-shadow 0.3s ease;
 
-    &:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    .createAchievementButton {
+      justify-content: center;
+      cursor: pointer;
+      background: linear-gradient(to bottom right, #6dd5ed, #2193b0);
+      color: white;
+      font-size: 1.25rem;
+      text-align: center;
+      padding: 1rem;
     }
   }
 }
