--- a/src/pages/Workers/SearchInputWorkers/SearchInputWorkers.module.scss
+++ b/src/pages/Workers/SearchInputWorkers/SearchInputWorkers.module.scss
@@ -1,5 +1,6 @@
 .searchInputContainer {
     border: none;
+    margin-left: 20px;
   .searchWorkersInput {
     text-align: right;
     width: 148px;
