--- a/src/pages/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
+++ b/src/pages/Workers/WorkerPage/ModalAchieveLibrary/ModalAchieveLibrary.module.scss
@@ -13,11 +13,14 @@
 }
 
 .modalContent {
+  display: flex;
+  flex-direction: column;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   width: 100%; /* Ширина контента 100% от родительского контейнера */
   height: 100%; /* Высота контента 100% от родительского контейнера */
+  align-items: center;
 }
 
 .closeButton {
@@ -31,7 +34,22 @@
   color: white; /* Цвет кнопки */
 }
 
+h1 {
+  align-items: center;
+  justify-self: center;
+}
+
+.searchInput {
+  display: flex;
+    align-items: center;
+    width: 1245px;
+    padding-bottom: 24px;
+   
+}
+
+
 .achievementsList {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
