--- a/src/pages/Workers/SearchInputWorkers/SearchInputWorkers.module.scss
+++ b/src/pages/Workers/SearchInputWorkers/SearchInputWorkers.module.scss
@@ -1,7 +1,7 @@
 .searchInputContainer {
     border: none;
+    margin-left: 20px;
   .searchWorkersInput {
-    color: white;
     text-align: right;
     width: 148px;
     height: 40px;
