--- a/src/pages/AchievementsConstructor/ModalAddingAchieve.module.scss
+++ b/src/pages/AchievementsConstructor/ModalAddingAchieve.module.scss
@@ -51,31 +51,66 @@ h2 {
     color: white;
   }
 
-  input,
-  textarea,
-  select,
-  button {
+  .titleInput,
+  .rankInput {
     width: 100%;
-    padding: 10px;
-    border-radius: 8px;
-    border: 1px solid #ddd;
+    height: 36px;
+    border: none;
+    border-radius: 10px;
     margin-top: 5px;
     font-size: 1rem;
+    background-color: #f4f4f40f;
+  }
+  .fileDownload {
+    width: 100%;
+    height: 36px;
+    border: none;
+    border-radius: 10px;
+    margin-top: 5px;
+    font-size: 1rem;
+    background-color: #f4f4f40f;
+  }
+  textarea,
+  select {
+    width: 100%;
+    height: 36px;
+    border: none;
+    border-radius: 10px;
+    margin-top: 5px;
+    font-size: 1rem;
+    background-color: #f4f4f40f;
   }
 
   textarea {
     resize: vertical;
   }
 
-  button {
+  button,
+  input[type="file"] {
+    width: calc(50% - 10px);
+    height: 48px; /* Распределение кнопок на 50% ширины контейнера */
+    border-radius: 10px;
+    align-items: center;
     cursor: pointer;
-    background: #4caf50;
-    color: white;
+    background: #f4f4f405;
+    border: 1px solid #f4f4f414;
+    color: #f4f4f4;
     transition: background 0.3s ease;
 
     &:hover {
-      background: #45a049;
+      background: rgba(106, 17, 195, 0.32);
+      border: 1px solid rgba(118, 45, 191, 0.32);
+      color: white;
+      opacity: 0.8;
     }
+  }
+
+  .inputContainer {
+    height: 48px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
   }
 }
 
