--- a/src/pages/AchievementsConstructor/ModalChooseBG.module.scss
+++ b/src/pages/AchievementsConstructor/ModalChooseBG.module.scss
@@ -3,12 +3,12 @@
   align-items: center;
   justify-content: center;
   position: fixed;
-  top: 150px;
-  left: center;
+  top: 50%;
+  left: 50%;
   width: 514px;
   height: 557px;
-  background: rgba(0, 0, 0, 0.5);
   z-index: 1000;
+  transform: translate(-50%, -50%);
 }
 
 .modalContent {
@@ -86,6 +86,9 @@ h2 {
     p {
       margin: 5px 0 0;
       font-size: 0.8rem;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
