--- a/src/pages/Workers/Workers.module.scss
+++ b/src/pages/Workers/Workers.module.scss
@@ -1,9 +1,10 @@
 .workers {
   display: grid;
+  padding-left: 40px;
 
   .workersTitle {
     display: flex;
-
+    
   }
   .workersBtn {
     display: flex;
