--- a/src/pages/AchievementsConstructor/ModalAddingAchieve.module.scss
+++ b/src/pages/AchievementsConstructor/ModalAddingAchieve.module.scss
@@ -53,6 +53,7 @@ h2 {
 
   .titleInput,
   .rankInput {
+    color: white;
     width: 100%;
     height: 36px;
     border: none;
@@ -72,6 +73,7 @@ h2 {
   }
   textarea,
   select {
+    color: white;
     width: 100%;
     height: 36px;
     border: none;
