--- a/src/pages/AchievementsConstructor/AchievementsConstructor.module.scss
+++ b/src/pages/AchievementsConstructor/AchievementsConstructor.module.scss
@@ -51,9 +51,6 @@
       width: 210px;
       height: 274px;
       flex-direction: column;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
       overflow: hidden;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       transition:
@@ -90,9 +87,21 @@
     }
 
     .achievementCard {
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
+      position: relative;
+      overflow: hidden;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: var(--background-image);
+        background-repeat: no-repeat;
+        background-position: center;
+        z-index: 0;
+      }
 
       .deleteButton {
         position: absolute;
@@ -109,6 +118,7 @@
         cursor: pointer;
         color: #fff;
         font-size: 1.25rem;
+        z-index: 1;
 
         &:hover {
           background: rgba(255, 0, 0, 1);
@@ -122,22 +132,34 @@
       img {
         width: 140px;
         height: 140px;
-        margin-top: 18px;
+        margin-top: 12px;
+        z-index: 1;
       }
 
       .cardContent {
         padding: 1rem;
         text-align: center;
+        z-index: 1;
 
         h2 {
-          color: #fff;
-          font-size: 1.25rem;
-          margin: 0.5rem 0;
+          color: rgb(244, 244, 244);
+          font-family: Proxima Nova;
+          font-size: 20px;
+          font-weight: 500;
+          line-height: 24px;
+          letter-spacing: 0.4%;
+          text-align: center;
         }
 
         p {
-          color: #ccc;
-          font-size: 0.9rem;
+          font-family: Proxima Nova;
+          font-size: 14px;
+          font-weight: 400;
+          line-height: 18px;
+          letter-spacing: 0.01em;
+          text-align: center;
+          color: rgb(244, 244, 244);
+          opacity: 0.8;
         }
       }
     }
