--- a/src/pages/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
+++ b/src/pages/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
@@ -1,96 +1,175 @@
+.workerModalAddUser{
+  position: relative;
+  z-index: 2;
+}
 
-.title{
-    position: relative;
-    left: 20px;
+.title {
+  position: relative;
+  left: 20px;
+  font-size: 24px;
 }
 
 .WorkersModalAddUserContent {
-    position: fixed;
-    left: 701px;
-    top: 85px;
-    width: 670px;
-    height: 718px;
-    box-sizing: border-box;
-    border-radius: 16px;
-    box-shadow:
-      4px 4px 100px 0px rgba(0, 0, 0, 0.05),
-      -4px -4px 100px 0px rgba(0, 0, 0, 0.05);
-    backdrop-filter: blur(60px);
-    background: rgba(32, 32, 33, 0.8);
-  }
-  .header {
-    display: flex;
-    align-items: center;
-  
-    .avatarUser {
-      width: 72px;
-      height: 72px;
-      border-radius: 50px;
-      cursor: pointer;
-    }
-    .workerLoginAdd {
-      margin: 0;
-      input {
-        width: 215px;
-        height: 36px;
-        box-sizing: border-box;
-        border: none;
-        border-radius: 10px;
-        background: rgba(244, 244, 244, 0.02);
-      }
-    }
-    .checkbox__link {
-      display: flex;
-    }
-  }
-  
-  .formFilling {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  
-  .btnGroups {
+  position: fixed;
+  left: 436px;
+  top: 96px;
+  width: 670px;
+  height: 718px;
+  box-sizing: border-box;
+  border-radius: 16px;
+  box-shadow:
+    4px 4px 100px 0px rgba(0, 0, 0, 0.05),
+    -4px -4px 100px 0px rgba(0, 0, 0, 0.05);
+  backdrop-filter: blur(60px);
+  background: rgba(32, 32, 33, 0.8);
+}
+.header {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+
+  .avatarUser {
     position: relative;
-    top: 66px;
-    left: 397px;
-  }
-  .btn__close {
-    width: 124px;
-    height: 36px;
-    font-size: 18px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    backdrop-filter: blur(12px);
-    background: rgba(244, 244, 244, 0.06);
-    opacity: 0.8;
-    border: none;
-    margin-right: 12px;
+    width: 72px;
+    height: 72px;
+    border-radius: 50px;
     cursor: pointer;
-    img {
+  }
+  .workerLoginAdd {
+    margin-left: 20px;
+
+    input {
+      padding-left: 10px;
       position: relative;
-      top: 4px;
-      right: 6px;
-      border: 1px dotted gray;
+      width: 215px;
+      height: 36px;
+      box-sizing: border-box;
+      border: none;
+      border-radius: 10px;
+      background: rgba(244, 244, 244, 0.02);
     }
   }
-  
-  .btn__add {
-    width: 124px;
-    height: 36px;
-    font-size: 18px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    backdrop-filter: blur(12px);
-    background: rgba(106, 17, 195, 0.32);
-    border: none;
-    margin-right: 12px;
-    cursor: pointer;
-    img {
-      position: relative;
-      top: 4px;
-      right: 6px;
-      border: 1px dotted gray;
+}
+
+
+.description__title {
+  margin: 0;
+}
+
+.workersModalAddUser__input {
+  padding-left: 10px;
+  width: 293px;
+  height: 36px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  background: rgba(244, 244, 244, 0.06);
+  border: none;
+}
+
+.formFilling {
+  display: flex;
+  justify-content: space-evenly;
+}
+.btnAddTag{
+  position: relative;
+  top: -26px;
+    left: -25px;
+    font-size: 20px;
+  width: 16px;
+  height: 16px;
+  background: none;
+  border: none;
+}
+.checkbox__link{
+  form{
+    label{
+      display: flex;
+      align-items: center;
+      margin-left: 20px;
+      
+        input{
+          width: 24px;
+          height: 24px;
+          margin-right: 8px;
+        }
     }
   }
-  
+}
+.workerBirthdayAdd {
+  input {
+    background-image: url("../../../assets/dateIcon.svg");
+    background-repeat: no-repeat;
+    background-position: 9px 9px;
+    padding-left: 29px;
+  }
+}
+.workerNameAdd{
+  margin-bottom: 16px;
+}
+.workerSecondNameAdd{
+  margin-bottom: 16px;
+}
+.workerPatronymiAdd{
+  margin-bottom: 16px;
+}
+.workerPhone{
+  margin-bottom: 16px;
+}
+.workerPassword{
+  margin-bottom: 16px;
+}
+.workerPositionAdd{
+  margin-bottom: 16px;
+}
+.workerStartdateAdd {
+  margin-bottom: 16px;
+  input {
+    background-image: url("../../../assets/dateIcon.svg");
+    background-repeat: no-repeat;
+    background-position: 9px 9px;
+    padding-left: 29px;
+  }
+}
+.btnGroups {
+  position: relative;
+  top: 66px;
+  left: 397px;
+}
+.btn__close {
+  width: 124px;
+  height: 36px;
+  font-size: 18px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  backdrop-filter: blur(12px);
+  background: rgba(244, 244, 244, 0.06);
+  opacity: 0.8;
+  border: none;
+  margin-right: 12px;
+  cursor: pointer;
+  img {
+    position: relative;
+    top: 4px;
+    right: 6px;
+    border: 1px dotted gray;
+  }
+}
+
+.btn__add {
+  width: 124px;
+  height: 36px;
+  font-size: 18px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  backdrop-filter: blur(12px);
+  background: rgba(106, 17, 195, 0.32);
+  border: none;
+  margin-right: 12px;
+  cursor: pointer;
+  img {
+    position: relative;
+    top: 4px;
+    right: 6px;
+    border: 1px dotted gray;
+  }
+}
