--- a/src/pages/Workers/SearchInputWorkers/SearchInputWorkers.module.scss
+++ b/src/pages/Workers/SearchInputWorkers/SearchInputWorkers.module.scss
@@ -1,26 +1,38 @@
 .searchInputContainer {
-    border: none;
-    margin-left: 20px;
-  .searchWorkersInput {
-    color: white;
-    text-align: right;
-    width: 148px;
-    height: 40px;
-    border: none;
-    background: url("@/assets/search-icon.svg") no-repeat, #1C1C1C;
-    background-position: 6px 9px;
-    box-sizing: border-box;
-    border-bottom: 1px solid rgba(244, 244, 244, 0.04);
-    &:hover {
-      opacity: 1;
-      transform: scale(1.05);
-    }
-    &.active {
-      background-color: #f4f4f40a;
-      border: none;
-      opacity: 1;
-      transform: scale(0.95);
-    }
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+  border: none;
+}
+
+.searchWorkersInput {
+  color: white;
+  text-align: right;
+  width: 148px;
+  height: 40px;
+  border: none;
+  background:
+    url("@/assets/search-icon.svg") no-repeat,
+    #1c1c1c;
+  background-position: 6px 9px;
+  box-sizing: border-box;
+  border-bottom: 1px solid rgba(244, 244, 244, 0.04);
+  padding-left: 30px; /* Отступ для иконки поиска */
+  font-size: 14px;
+
+  &:hover {
+    opacity: 1;
+    transform: scale(1.05);
   }
- 
+
+  &.active {
+    background-color: #f4f4f40a;
+    border: none;
+    opacity: 1;
+    transform: scale(0.95);
+  }
+
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.5); /* Цвет плейсхолдера */
+  }
 }
