--- a/src/pages/AchievementsConstructor/AchievementsConstructor.module.scss
+++ b/src/pages/AchievementsConstructor/AchievementsConstructor.module.scss
@@ -1,145 +1,168 @@
 .achievementsConstructor {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  padding: 1rem;
-
-  .titleContainer {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    margin-bottom: 1rem;
-    color: #f4f4f4;
-
-    img {
-      width: 68px;
-      height: 56px;
-    }
-
-    h1 {
-      margin-left: 1rem;
-      font-size: 2rem;
-      color: #f4f4f4;
-    }
-  }
-
-  .divider {
     width: 100%;
-    height: 1px;
-    background: linear-gradient(
-      to right,
-      rgba(244, 244, 244, 0.64),
-      rgba(244, 244, 244, 0.16)
-    );
-    opacity: 0.8;
-    margin: 1rem 0;
-  }
-
-  .achievementsGrid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
-    grid-gap: 20px;
-    width: 100%;
-    max-width: 1200px;
-
-    .createAchievementButton,
-    .achievementCard {
-      border-radius: 20px;
-      align-items: center;
+    padding: 1rem;
+  
+    .titleContainer {
       display: flex;
-      justify-content: center;
-      width: 210px;
-      height: 274px;
-      flex-direction: column;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition:
-        transform 0.3s ease,
-        box-shadow 0.3s ease;
-      position: relative;
-      color: #fff;
-      font-size: 1.25rem;
-      cursor: pointer;
-
-      &:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+      align-items: center;
+      margin-bottom: 1rem;
+      color: #f4f4f4;
+  
+      img {
+        width: 68px;
+        height: 56px;
+      }
+  
+      h1 {
+        margin-left: 1rem;
+        font-size: 2rem;
+        color: #f4f4f4;
       }
     }
-
-    .createAchievementButton {
-      border-radius: 20px;
-      align-items: center;
-      display: flex;
-      width: 210px;
-      height: 274px;
-      flex-direction: column;
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition:
-        transform 0.3s ease,
-        box-shadow 0.3s ease;
-      background-image: url("/src/assets/CardAchievement.png");
-      border: 2px dashed #fff;
+  
+    .divider {
+      width: 100%;
+      height: 1px;
+      background: linear-gradient(
+        to right,
+        rgba(244, 244, 244, 0.64),
+        rgba(244, 244, 244, 0.16)
+      );
+      opacity: 0.8;
+      margin: 1rem 0;
     }
-
-    .achievementCard {
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-
-      .deleteButton {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        background: rgba(255, 0, 0, 0.8);
-        border: none;
-        border-radius: 50%;
-        width: 30px;
-        height: 30px;
-        display: none;
+  
+    .achievementsGrid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
+      grid-gap: 20px;
+      width: 100%;
+      max-width: 1200px;
+  
+      .createAchievementButton,
+      .achievementCard {
+        border-radius: 20px;
         align-items: center;
+        display: flex;
         justify-content: center;
-        cursor: pointer;
+        width: 210px;
+        height: 274px;
+        flex-direction: column;
+        overflow: hidden;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition:
+          transform 0.3s ease,
+          box-shadow 0.3s ease;
+        position: relative;
         color: #fff;
         font-size: 1.25rem;
-
+        cursor: pointer;
+  
         &:hover {
-          background: rgba(255, 0, 0, 1);
+          transform: translateY(-5px);
+          box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
       }
-
-      &:hover .deleteButton {
+  
+      .createAchievementButton {
+        border-radius: 20px;
+        align-items: center;
         display: flex;
+        width: 210px;
+        height: 274px;
+        flex-direction: column;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        overflow: hidden;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition:
+          transform 0.3s ease,
+          box-shadow 0.3s ease;
+        background-image: url("/src/assets/CardAchievement.png");
+        border: 2px dashed #fff;
       }
-
-      img {
-        width: 140px;
-        height: 140px;
-        margin-top: 18px;
-      }
-
-      .cardContent {
-        padding: 1rem;
-        text-align: center;
-
-        h2 {
+  
+      .achievementCard {
+        position: relative;
+        overflow: hidden;
+  
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-image: var(--background-image);
+          background-repeat: no-repeat;
+          background-position: center;
+          z-index: 0;
+        }
+  
+        .deleteButton {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          background: rgba(255, 0, 0, 0.8);
+          border: none;
+          border-radius: 50%;
+          width: 30px;
+          height: 30px;
+          display: none;
+          align-items: center;
+          justify-content: center;
+          cursor: pointer;
           color: #fff;
           font-size: 1.25rem;
-          margin: 0.5rem 0;
+          z-index: 1;
+  
+          &:hover {
+            background: rgba(255, 0, 0, 1);
+          }
         }
-
-        p {
-          color: #ccc;
-          font-size: 0.9rem;
+  
+        &:hover .deleteButton {
+          display: flex;
+        }
+  
+        img {
+          width: 140px;
+          height: 140px;
+          margin-top: 12px;
+          z-index: 1;
+        }
+  
+        .cardContent {
+          padding: 1rem;
+          text-align: center;
+          z-index: 1;
+  
+          h2 {
+            color: rgb(244, 244, 244);
+            font-family: Proxima Nova;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 24px;
+            letter-spacing: 0.4%;
+            text-align: center;
+          }
+  
+          p {
+            font-family: Proxima Nova;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 18px;
+            letter-spacing: 0.01em;
+            text-align: center;
+            color: rgb(244, 244, 244);
+            opacity: 0.8;
+          }
         }
       }
     }
   }
-}
+  
