--- a/src/pages/MyPage/buttons&inputes/buttons.module.scss
+++ b/src/pages/MyPage/buttons&inputes/buttons.module.scss
@@ -166,7 +166,7 @@ button {
 
 .searchInputContainer {
   border: none;
-.searchWorkersInput {
+.searchInput {
   color: white;
   text-align: right;
   width: 180px;
