--- a/src/pagesAdmin/Workers/WorkersModal/WorkersModal.module.scss
+++ b/src/pagesAdmin/Workers/WorkersModal/WorkersModal.module.scss
@@ -2,8 +2,9 @@
   display: flex;
   padding-left: 20px;
   position: fixed;
-  left: 700px;
-  top: 100px;
+  z-index: 1;
+  left: 516px;
+  top: 158px;
   width: 480px;
   height: 489px;
   box-sizing: border-box;
