--- a/src/pagesAdmin/Workers/Workers.module.scss
+++ b/src/pagesAdmin/Workers/Workers.module.scss
@@ -1,10 +1,19 @@
 .workers {
   display: grid;
+  position: relative;
+  z-index: 0;
+  padding-left: 40px;
   padding-left: 40px;
 
   .workersTitle {
     display: flex;
+    align-items: center;
+    img{
+      width: 56px;
+      height: 56px;
 
+    }
+    
   }
   .workersBtn {
     display: flex;
@@ -27,6 +36,7 @@
       .workersList__item li {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         align-items: center;
         padding-right: 32px;
         width: 640px;
