--- a/src/pagesAdmin/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
+++ b/src/pagesAdmin/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
@@ -39,6 +39,7 @@
     margin-left: 20px;
 
     input {
+      color: white;
       padding-left: 10px;
       position: relative;
       width: 215px;
@@ -57,6 +58,7 @@
 }
 
 .workersModalAddUser__input {
+  color: white;
   padding-left: 10px;
   width: 293px;
   height: 36px;
@@ -88,6 +90,7 @@
       margin-left: 20px;
       
         input{
+          color: white;
           width: 24px;
           height: 24px;
           margin-right: 8px;
@@ -97,6 +100,7 @@
 }
 .workerBirthdayAdd {
   input {
+    color: white;
     background-image: url("../../../assets/dateIcon.svg");
     background-repeat: no-repeat;
     background-position: 9px 9px;
@@ -124,6 +128,7 @@
 .workerStartdateAdd {
   margin-bottom: 16px;
   input {
+    color: white;
     background-image: url("../../../assets/dateIcon.svg");
     background-repeat: no-repeat;
     background-position: 9px 9px;
