--- a/src/pagesAdmin/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
@@ -23,6 +23,11 @@
     font-weight: 700;
     line-height: 56px;
   }
+  .genderIcon {
+    color: white;
+    width: 20px;
+    height: 20px;
+  }  
 .workerMail {
   font-size: 16px;
   font-weight: 400;
