--- a/src/pagesAdmin/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
+++ b/src/pagesAdmin/Workers/WorkersModalAddUser/WorkersModalAddUser.module.scss
@@ -8,7 +8,9 @@
   left: 20px;
   font-size: 24px;
 }
-
+.formFilling__rightContent{
+  visibility: inherit;
+}
 .WorkersModalAddUserContent {
   position: fixed;
   left: 436px;
