--- a/src/pagesAdmin/MyPage/WorkerInitial/WorkerInitial.module.scss
+++ b/src/pagesAdmin/MyPage/WorkerInitial/WorkerInitial.module.scss
@@ -5,25 +5,26 @@
   gap: 16px;
 }
 
-.workerAvatar {
-  border-radius: 50px;
-  padding-left: 24px;
-}
+
 .small .workerAvatar {
+  border-radius: 100%;
+  margin-left: 24px;
   width: 48px;
   height: 48px;
 }
 .large .workerAvatar {
+  border-radius: 100%;
+  margin-left: 24px;
   width: 72px;
   height: 72px;
 }
 
 .workerName {
-    font-size: 24px;
-    color: #fff;
-    font-weight: 700;
-    line-height: 56px;
-  }
+  font-size: 24px;
+  color: #fff;
+  font-weight: 700;
+  line-height: 56px;
+}
 .workerMail {
   font-size: 16px;
   font-weight: 400;
