--- a/src/pagesAdmin/Workers/Workers.module.scss
+++ b/src/pagesAdmin/Workers/Workers.module.scss
@@ -37,7 +37,6 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        align-items: center;
         padding-right: 32px;
         width: 640px;
         box-sizing: border-box;
@@ -81,5 +80,8 @@
 
 
 .formFilling__rightContent {
+  visibility: inherit;
+}
+.notFound{
   visibility: inherit;
 }
