--- a/src/pagesAdmin/Workers/WorkerPage/buttons&inputes/buttons.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/buttons&inputes/buttons.module.scss
@@ -7,6 +7,12 @@ button {
 .ChangeWorkerButton {
   visibility: inherit;
 }
+.searchInputContainer{
+  visibility: inherit;
+}
+.searchInput{
+  visibility: inherit;
+}
 .ChangeWorkerInformationButton {
   display: flex;
   align-items: center;
